2007-09-05  Andreas Schmitz <schmitz@lat-lon.de>
        build.properties:
        Made library path relative for ease of use.

2007-09-05  Andreas Schmitz <schmitz@lat-lon.de>
        src/de/latlon/deejump/plugin/wfs/WFSPanel.java,
        src/de/latlon/deejump/plugin/wfs/auth/LoginDialog.java,
        src/de/latlon/deejump/plugin/wfs/AbstractWFSWrapper.java:
        Cosmetic changes.

2007-08-24  Andreas Schmitz <schmitz@lat-lon.de>
        src/de/latlon/deejump/plugin/wfs/WFSLayerListener.java:
        Fixed non-unicode comment character.

2007-08-15  Andreas Schmitz <schmitz@lat-lon.de>
        src/de/latlon/deejump/plugin/wfs/TransactionFactory.java:
        * Fixed version string in namespace.

2007-08-10  Andreas Schmitz <schmitz@lat-lon.de>
        de/latlon/deejump/ui/I18N.java,
        de/latlon/deejump/ui/messages.properties,
        de/latlon/deejump/ui/messages_en.properties,
        de/latlon/deejump/ui/Messages.java,
        de/latlon/deejump/plugin/wfs/SpatialCriteriaPanel.java,
        de/latlon/deejump/plugin/wfs/WFSFrame.java,
        de/latlon/deejump/plugin/wfs/PropertySelectionPanel.java,
        de/latlon/deejump/plugin/wfs/WFSOptionsPanel2.java,
        de/latlon/deejump/plugin/wfs/WFSPlugIn.java,
        de/latlon/deejump/plugin/wfs/WFSPanel.java,
        de/latlon/deejump/plugin/wfs/auth/LoginDialog.java,
        de/latlon/deejump/plugin/wfs/RequestTextArea.java,
        de/latlon/deejump/plugin/wfs/PropertyCriteriaPanel.java,
        de/latlon/deejump/plugin/wfs/WFSPanelButtons.java:
        * Fixed an issue with non-localized messages under Windows.

2007-08-10  Andreas Schmitz <schmitz@lat-lon.de>
        build.xml:
        * Added simplejar target to create .jar without timestamp in name.

2007-08-07  Andreas Schmitz <schmitz@lat-lon.de>
        src/de/latlon/deejump/plugin/wfs/WFSFrame.java:
        Fixed the WFSFrame to allow standalone usage again.

2007-08-07  Andreas Schmitz <schmitz@lat-lon.de>
        lib/deegree2.jar,